# agent-scaffold

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: capabilities.md  ecosystem.md  index.md
docs/design/: orchestrator.md  security.md
docs/getting-started/: installation.md  interactive-shell.md  quickstart.md
docs/guides/: configuration.md  content-sources.md  credentials.md  project-lifecycle.md  troubleshooting.md
docs/reference/: cli.md  languages.md  recipes.md  repl.md
docs/stylesheets/: extra.css
scripts/: build_hooks.py  context_budget_report.py  embed_catalog.py  sync_deployments.sh
src/agent_forge/: __init__.py  __main__.py  cache.py  cli.py  config.py  contract.py  discovery.py  generator.py
src/agent_forge/_bundled_deployments/: __init__.py
src/agent_scaffold/: _embedded_catalog.json  _filesec.py  _redact.py  _scaffold_dir.py  agents_md.py  auth.py  auth_browser.py  branding.py  bundles.py  capabilities.py  capability_emit.py  catalog.py  cli.py  cli_auth.py  cli_doctor.py  cli_interactive.py  cli_secrets.py  cli_shared.py  cli_update.py  config.py  content_lint.py  context.py  contract.py  costs.py  discovery.py  doctor.py  effort.py  envfile.py  framework_versions.py  generator.py  imports.py  integrations.py  language_hints.py  manifest.py  merge.py  models.py  orchestrator.py  pipeline.py  plan.py  ports.py  (+16 more)
src/agent_scaffold/deploy/: __init__.py  _common.py  fly.py  railway.py  vercel.py
src/agent_scaffold/eval/: __init__.py  _common.py  promptfoo.py
src/agent_scaffold/languages/: python.yaml  typescript.yaml
src/agent_scaffold/prompts/: single_file.md  system.md  system_strict.md  user_template.md  validation_repair.md
src/agent_scaffold/repl/: __init__.py  _capabilities.py  _fuzzy.py  commands.py  drafts.py  readiness.py  refine.py  render.py  session.py  shell.py
src/agent_scaffold/steps/: __init__.py  _subprocess.py  bootstrap_evals.py  bootstrap_kafka.py  bootstrap_langfuse.py  bootstrap_langsmith.py  bootstrap_mcp.py  bootstrap_observability.py  bootstrap_vector_db.py  commit_push.py  docker_up.py  emit_deploy_configs.py  install_deps.py  launch_backend.py  launch_frontend.py  migrations.py  open_editor.py  seed.py  smoke_test.py  wire_credentials.py
tests/: conftest.py  test_agents_md.py  test_auth.py  test_auth_browser.py  test_bundled_capabilities.py  test_bundled_recipe_tiers.py  test_bundles.py  test_capabilities.py  test_capabilities_mcp.py  test_capability_emit.py  test_capability_override.py  test_catalog.py  test_catalog_advanced_fields.py  test_cli_e2e.py  test_cli_interactive_framework.py  test_cmd_customize_and_layer.py  test_cmd_down_frontend.py  test_cmd_eval.py  test_cmd_lifecycle.py  test_cmd_logs_frontend.py  test_cmd_new_autorun.py  test_cmd_scaffold.py  test_cmd_tier_and_layers.py  test_config.py  test_connect_cli.py  test_content_lint.py  test_context.py  test_context_blueprint_links.py  test_context_budget_prompt.py  test_context_cache_tiers.py  test_context_capability_tier.py  test_contract.py  test_contract_app_service.py  test_contract_compose_merge.py  test_contract_frontend_collision.py  test_contract_frontend_service.py  test_contract_hardening.py  test_contract_model_ids.py  test_costs.py  test_costs_preflight.py  (+72 more)
tests/fixtures/: catalog_minimal.yaml  steps.py
tests/fixtures/mock_deployments/.cache/catalog/: e21076dab3e41139.etag  e21076dab3e41139.yaml
tests/fixtures/mock_deployments/docs/capabilities/: README.md  SCHEMA.md
tests/fixtures/mock_deployments/docs/capabilities/cache/: redis.md
tests/fixtures/mock_deployments/docs/capabilities/eval/: promptfoo.md
tests/fixtures/mock_deployments/docs/capabilities/frontend/: nextjs-tiny.md
tests/fixtures/mock_deployments/docs/capabilities/host/: vercel-single.md  vercel.md
tests/fixtures/mock_deployments/docs/capabilities/live_data/: tavily.md
tests/fixtures/mock_deployments/docs/capabilities/malformed/: no_frontmatter.md  wrong_path.md
tests/fixtures/mock_deployments/docs/capabilities/memory_store/: zep.md
tests/fixtures/mock_deployments/docs/capabilities/obs/: langfuse.md  langsmith.md
tests/fixtures/mock_deployments/docs/capabilities/queue/: kafka.md
tests/fixtures/mock_deployments/docs/cross-cutting/: auth.md  logging.md  multi-tenancy.md  observability.md  rate-limiting.md  testing-strategy.md
tests/fixtures/mock_deployments/docs/frameworks/: langgraph.md  pydantic-ai.md  vercel-ai-sdk.md
tests/fixtures/mock_deployments/docs/patterns/: event-driven.md  rag.md  react.md
tests/fixtures/mock_deployments/docs/recipes/: README.md  SCHEMA.md  bad-recipe-deps.md  bad-required-files.md  conflict-recipe-deps.md  customer-support-triage.md  docs-rag-qa.md  event-driven-recipe.md  framework-composes-override.md  framework-mixed-aliases.md  no-h1-recipe.md  with-advanced-fields.md  with-capabilities.md  with-external-services.md  with-load-list-and-prose.md  with-load-list.md  with-recipe-deps.md  with-required-files.md
tests/fixtures/mock_deployments/docs/stack/: vector-qdrant.md
tests/fixtures/mock_responses/: dirty_python.json  malformed.txt  patch_response.json  valid_python.json  valid_python_fenced.txt
tests/security/: test_argv_no_secrets.py  test_filesec.py  test_gitignore_enforcement.py  test_no_input_for_secrets.py  test_no_shell_true.py  test_redact.py  test_secret_typing.py  test_secrets_never_reach_llm.py  test_secrets_purge.py
tests/steps/: conftest.py  test_bootstrap_evals.py  test_bootstrap_kafka.py  test_bootstrap_langfuse.py  test_bootstrap_langsmith.py  test_bootstrap_mcp.py  test_bootstrap_observability.py  test_bootstrap_vector_db.py  test_commit_push.py  test_docker_up.py  test_emit_deploy_configs.py  test_install_deps.py  test_launch_backend.py  test_launch_frontend.py  test_migrations.py  test_open_editor.py  test_seed.py  test_smoke_test.py  test_subprocess.py  test_wire_credentials.py
(+6 files in other folders)
