[project]
name = "agent-scaffold-cli"
version = "0.1.1"
description = "Generate runnable AI agent projects from markdown specs in the agent-deployments repo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-scaffold contributors" }]
keywords = ["ai", "agent", "anthropic", "claude", "cli", "code-generation", "scaffolding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer==0.12.5",
    "click<8.2",
    "questionary==2.0.1",
    "rich==13.7.1",
    "anthropic>=0.40.0",
    "pydantic==2.7.4",
    "pyyaml==6.0.2",
    "keyring>=24.0,<26",
]

[project.urls]
Homepage = "https://github.com/jagguvarma15/agent-scaffold"
Repository = "https://github.com/jagguvarma15/agent-scaffold"
Issues = "https://github.com/jagguvarma15/agent-scaffold/issues"
Changelog = "https://github.com/jagguvarma15/agent-scaffold/releases"

[project.scripts]
agent-scaffold = "agent_scaffold.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["**/.gitkeep"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_scaffold"]

# Bundled deployments docs are .gitignored (synced by scripts/sync_deployments.sh
# at build time), so the default VCS-aware package walk skips them. Force-include
# them into both the wheel and the sdist explicitly.
[tool.hatch.build.targets.wheel.force-include]
"src/agent_scaffold/_bundled_deployments/docs" = "agent_scaffold/_bundled_deployments/docs"

[tool.hatch.build.targets.sdist.force-include]
"src/agent_scaffold/_bundled_deployments/docs" = "src/agent_scaffold/_bundled_deployments/docs"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B008"]
"src/agent_scaffold/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["questionary.*", "psycopg.*", "kafka.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = ["integration: marks tests requiring network or external tools"]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-PyYAML==6.0.12.20240917",
]

[tool.coverage.run]
source = ["agent_scaffold"]

[tool.coverage.report]
show_missing = true
skip_empty = true
