[project]
name = "agent-scaffold-cli"
version = "0.3.707a1"
description = "Generate runnable AI agent projects from markdown specs in the agent-deployments repo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-scaffold contributors" }]
keywords = ["ai", "agent", "anthropic", "claude", "cli", "code-generation", "scaffolding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    # typer 0.20+ vendors its CLI core and no longer depends on click, which
    # removes click from the dependency tree entirely (it was pinned <8.2 for
    # the old typer and flagged by pip-audit as PYSEC-2026-2132 at 8.1.8).
    "typer==0.26.8",
    "questionary==2.0.1",
    # typer needs rich >=13.8; stay on the newest 13.x rather than jump majors.
    "rich==13.9.4",
    # Upper-bounded: the SDK ships breaking changes across majors (client
    # construction, streaming, error types) that would surface as runtime
    # failures in the generator. Widen deliberately after testing a new major.
    "anthropic>=0.40,<1",
    # Compiled deps are given ranges (not exact pins) so pip resolves to a
    # version with a prebuilt wheel for the user's interpreter. Exact pins
    # (pydantic==2.7.4 -> pydantic-core==2.18.4) had no cp313/cp314 wheels and
    # forced a from-source Rust build that fails on Python >=3.13 (PyO3 too old).
    "pydantic>=2.9,<3",
    "pyyaml>=6.0.1,<7",
    "pyfiglet>=1.0.2",
    # C++-backed fuzzy matching for the REPL: unknown-command / capability-id
    # suggestions, tab completion, and /stack + /recipe filtering. Ships
    # prebuilt wheels; ranged like the other compiled deps.
    "rapidfuzz>=3.9,<4",
    # Already transitive via questionary, but pinned explicitly because the
    # `scaffold` REPL drives it directly (PromptSession, FileHistory,
    # patch_stdout). Mismatched versions between top-level and transitive
    # have bitten us before.
    "prompt-toolkit>=3.0,<4",
]

[project.optional-dependencies]
# OS-native credential storage (macOS Keychain / Windows Credential Manager /
# Linux Secret Service). Optional so a default install never imports keyring —
# bare `scaffold` on a fresh machine then can't trigger a keychain prompt and
# degrades to the mode-0600 file backend. `auth` lazy-imports it.
keyring = ["keyring>=24.0,<26"]
# Bootstrap step SDKs. Each extra is opt-in so the base CLI stays light.
# Steps lazy-import these and SKIP cleanly when absent.
vector = [
    "qdrant-client>=1.10,<2",
    "httpx>=0.27",
    "psycopg[binary]>=3.1,<4",
]
kafka = [
    "kafka-python>=2.0,<3",
    "redis>=5.0,<6",
]
obs = [
    "langsmith>=0.1,<1",
]
# Eval runners are typically Node-based; nothing to pip install for Promptfoo
# (the plugin shells out to `npx`). Listed for symmetry + so `doctor` and
# package authors can name the extra in install hints.
eval = []
all = [
    "qdrant-client>=1.10,<2",
    "httpx>=0.27",
    "psycopg[binary]>=3.1,<4",
    "kafka-python>=2.0,<3",
    "redis>=5.0,<6",
    "langsmith>=0.1,<1",
    "keyring>=24.0,<26",
]

[project.urls]
Homepage = "https://github.com/jagguvarma15/agent-scaffold"
Repository = "https://github.com/jagguvarma15/agent-scaffold"
Issues = "https://github.com/jagguvarma15/agent-scaffold/issues"
Changelog = "https://github.com/jagguvarma15/agent-scaffold/releases"

[project.scripts]
agent-scaffold = "agent_scaffold.cli:app"
scaffold = "agent_scaffold.cli:scaffold_main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["**/.gitkeep"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_scaffold"]

# Refresh src/agent_scaffold/_embedded_catalog.json before wheel assembly so
# local `uv build` runs ship a fresh fallback. See scripts/build_hooks.py
# for the env-var escape hatch (AGENT_SCAFFOLD_BUILD_SKIP_REFRESH=1) and
# the graceful-degradation behavior.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/build_hooks.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# S = flake8-bandit security rules, C4 = flake8-comprehensions. The remaining
# bandit groups are scoped out below where they don't fit a subprocess-heavy CLI.
select = ["E", "F", "I", "B", "UP", "W", "S", "C4"]
ignore = [
    "E501",
    # Type-narrowing asserts (`assert x is not None  # mypy`) are idiomatic and
    # not load-bearing — runtime invariants raise explicitly instead.
    "S101",
    # List-form `subprocess.run([...])` (shell=False) is the *safe* form; S603
    # flags it regardless of input, so it's noise for a tool that shells out to
    # uv/git/pnpm/docker everywhere. The real risk (shell=True) is S602, kept on.
    "S603",
    # Dev tools are resolved via PATH by design (`["git", ...]`, `["uv", ...]`) —
    # absolute paths aren't portable across the machines this CLI runs on.
    "S607",
]

[tool.ruff.lint.per-file-ignores]
# The test suite is not shipped: pytest asserts (S101), /tmp paths (S108), and
# fake credentials (S105/S106) are all expected — bandit doesn't apply. C408 is
# scoped out too — `dict(key=val)` is the idiomatic fixture style in tests.
"tests/**" = ["B008", "S", "C408"]
"src/agent_scaffold/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "questionary.*",
    "psycopg.*",
    "kafka.*",
    "qdrant_client.*",
    "langsmith.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = ["integration: marks tests requiring network or external tools"]

[dependency-groups]
dev = [
    # pytest 9.0.3 fixes CVE-2025-71176 (no 8.x backport); pytest-cov >=6.1 is the
    # first line compatible with pytest 9. Ranged so uv resolves the pair.
    "pytest>=9.0.3",
    "pytest-cov>=6.1",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-PyYAML==6.0.12.20240917",
    # keyring moved to an optional runtime extra, but the auth test suite still
    # exercises its code paths — keep it installed for development/CI.
    "keyring>=24.0,<26",
]

[tool.coverage.run]
source = ["agent_scaffold"]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Gate: fail the run if coverage regresses below this floor (current ~84%).
# Honoured by pytest-cov in CI and by `coverage report` locally. Ratchet up
# as the orchestration-core backfill lands; never lower it to make a PR pass.
fail_under = 80
